--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,7 @@
 
    <div id="central-content" class="central-content">
         <img src="static/images/logo.png">
-        <h2>UCBvet</h2>
-        <h4>Copiloto de Vendas</h4>
+        <h4>Gerenciamento de TI</h4>
         <p>Faça uma pergunta para começar!</p>
     </div>
 
