Inserting and implementing login without hash

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,12 +10,12 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Login - UCBvet</title>
-    <link rel="icon" href="static/imagens/Logo.png" type="image/png">
+    <link rel="icon" href="static/images/logo.png" type="image/png">
 </head>
 
 <body>
     <div id="login-container">
-        <img src="static/imagens/logo.png" alt="logo" id="login-logo">
+        <img src="static/images/logo.png" alt="logo" id="login-logo">
         <h2>Entre na sua conta</h2>
         <form id="login-form">
             <div class="input-group">
@@ -28,7 +28,7 @@
             </div>
             <button type="submit">Entrar</button>
             <br>
-            <a href="/signup">Ainda não tem uma conta? Cadastre-se aqui!</a>
+            <a href="/cadastro">Ainda não tem uma conta? Cadastre-se aqui!</a>
         </form>
     </div>
     <script src="static/scripts/login.js"></script>
