--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,12 +10,12 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Cadastro - UCBvet</title>
-    <link rel="icon" href="static/imagens/Logo.png" type="image/png">
+    <link rel="icon" href="static/images/logo.png" type="image/png">
 </head>
 
 <body>
     <div id="login-container">
-        <img src="static/imagens/Logo.png" alt="logo" id="login-logo">
+        <img src="static/images/logo.png" alt="logo" id="login-logo">
         <h2>Cadastre-se</h2>
         <form id="cadastro-form" method="POST">
             <div class="input-group">
