Fixing desgin errors and first chat create bug when any chat is selected

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="../static/styles/index.css">
 
     <!-- Title -->
-    <title>Chat GPT 2.0</title>
+    <title>LLM</title>
+    <link rel="icon" href="static/images/logo.png" type="image/png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +37,7 @@
             <div class="chats" id="chats"></div>
 
             <div class="user-controls" id="user-controls">
-                <p>Brenno Murakami</p>
+                <p>{{ username }}</p>
                 <button id="sair-btn" class="sair-btn">Sair</button>
             </div>
 
