--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Cadastro - UCBvet</title>
+    <title>Cadastro - LLM</title>
     <link rel="icon" href="static/images/logo.png" type="image/png">
 </head>
 
